# addend

./: .gitignore  LICENSE  README.md  addend.py  setup.cfg
addend/: __init__.py  addend.py  command_line.py
info/: python for the blind free download - SourceForge.webloc
tests/: _a.py  getPythonFiles4testing.py  grepOUT1  grepOUT2  kds.py  orig1.files  orig2.files  runaddendTest1  runaddendTest2  sounds.py
tests/errors/: coverpage.py.stdout.txt  future_test1.1124_231849.py  future_test1.py.stdout.txt  import-zips.py.stdout.txt  libisl.23.dylib-gdb.py.stdout.txt  ndiff.py.stdout.txt  pyautogui_x11 copy.py  pyautogui_x11.py.stdout copy.txt  pyautogui_x11.py.stdout.txt  sample_doctest.1124_231905.py  sample_doctest.py.stdout.txt  test_faulthandler.py.stdout.txt
tests/gitinfo/: git - Why is .gitignore not ignoring my files? - Stack Overflow.webloc
tests/orig1/: Ch22_Final.py  pyautogui_x11.py
tests/out1/: Ch9_Final.1206_125502.py  Ch9_Final.1209_203006.py  LCC.py  MLC.py
tests/source/: pytestfiles.txt
