[metadata]
name = addend
version = 1.19
author = Klaus D Szyska
author_email = klaus-szyska@comcast.net
description = This python utility is intended for `BLIND` python programmers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KDS215/addend
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude = 
    errors
    info
    old
    tests
    window*
    Prakash*

[options.entry_points]
console_scripts =
    addend = addend.command_line:main

